Fix for SUP-414.